<resources>
    <string name="app_name">GDUTHelper</string>
    <!-- activity_login-->
    <string name="et_account_hint">请输入学号</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_code_hint">请输入验证码</string>
    <string name="et_password_before">请输入原密码</string>
    <string name="et_password_new">请输入新密码</string>
    <string name="et_password_confirm">请确认新密码</string>
    <string name="bt_text">登　陆</string>
    <string name="bt_confirm">确认修改</string>
</resources>
