<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.zzh.gdut.gduthelper.view.widget.LoginRelativeLayout
        android:id="@+id/rl_change_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/et_shape_background"
        android:padding="@dimen/viewPadding_20dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_account"
            android:hint="@string/et_password_before"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/mainTestSize_16sp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/et_password_hint"
            app:met_floatingLabelTextSize="@dimen/secondTestSize_14sp"
            app:met_helperText=""
            app:met_helperTextColor="@color/customRed"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/primaryText" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_password_before"
            android:hint="@string/et_password_new"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/mainTestSize_16sp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/et_password_hint"
            app:met_floatingLabelTextSize="@dimen/secondTestSize_14sp"
            app:met_helperText=""
            app:met_helperTextColor="@color/customRed"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/primaryText" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_password_new"
            android:hint="@string/et_password_confirm"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/mainTestSize_16sp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/et_password_hint"
            app:met_floatingLabelTextSize="@dimen/secondTestSize_14sp"
            app:met_helperText=""
            app:met_helperTextColor="@color/customRed"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/primaryText" />

    </com.zzh.gdut.gduthelper.view.widget.LoginRelativeLayout>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rl_change_password"
        android:layout_alignRight="@+id/rl_change_password"
        android:layout_below="@+id/rl_change_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_click_background"
        android:text="@string/bt_confirm"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
